tests/negative-fixtures/banned_process_command_new/src/lib.rs
use std::process::Command;

pub fn process_command() -> Command {
    Command::new("true")
}
